--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -47,4 +47,15 @@
 		background-color: transparent;
 	}
 }
+
+@media	(min-width:	770px)	{
+	.cabecalho__item-menu--matricular	{
+		margin-left:	1.42em;
+		border-radius:	6px;
+		background-color:	#e93d50;
+		}
+	.cabecalho__item-menu--matricular	a	{
+		padding:	1.8em	3.5em;
+		}
+		
 	
